<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_name_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/team_name_label"
            android:textColor="#132448"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/team_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/team_name"
            android:textColor="#132448"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/team_logo_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:gravity="center"
            android:text="@string/team_logo_label"
            android:textColor="#132448"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:src="@drawable/ny"
            android:layout_marginLeft="24dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="387dp"
        android:layout_height="372dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_history_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/team_history_label"
            android:textColor="#132448"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/team_history"
            android:layout_width="253dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/team_history"
            android:textAlignment="textStart"
            android:textColor="#132448"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/squad_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:text="@string/squad_button"
            android:textColor="#132448"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>